--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "start": "npm run dev",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "start": "vite",
+    "storybook": "storybook dev -p 6006"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
